--- a/html/index.css
+++ b/html/index.css
@@ -71,6 +71,10 @@ h2.header {
     box-shadow: 2px 2px 10px grey
 }
 
+.half {
+    left: 80%;
+}
+
 .sticky {
     position: fixed;
     top: 0;
@@ -96,7 +100,6 @@ p {
     align-content: center;
     margin: auto;
 } 
-
 
 .rotate {
     -ms-transform: rotate(90deg); /* IE 9 */
