--- a/html/index.css
+++ b/html/index.css
@@ -7,6 +7,10 @@ body {
     padding-bottom: 50px;
 }
 
+img {
+    height: auto;
+}
+
 .header {
     background-color: #a01040;
     padding: 15px;
