Fixed some stuff

--- a/html/index.css
+++ b/html/index.css
@@ -99,7 +99,7 @@ h2.header {
 
 p {
     padding: 10px;
-    font-size: 20px;
+    font-size: 25px;
     width: 95%;
     align-content: center;
     margin: auto;
@@ -125,3 +125,41 @@ p {
     clear: both;
     display: table;
 }
+
+/* Split the screen in half */
+.split {
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+  }
+  
+  /* Control the left side */
+  .left {
+    left: 0;
+    background-color: #111;
+  }
+  
+  /* Control the right side */
+  .right {
+    right: 0;
+    background-color: red;
+  }
+  
+  /* If you want the content centered horizontally and vertically */
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  /* Style the image inside the centered container, if needed */
+  .centered img {
+    width: 150px;
+    border-radius: 50%;
+  }
