--- a/html/index.css
+++ b/html/index.css
@@ -7,6 +7,12 @@ body {
     padding-bottom: 50px;
 }
 
+.video-size
+{
+  width: 100%;
+  height: 400px;
+}
+
 div {
     border:2px solid #000000;
 }
