--- a/html/index.css
+++ b/html/index.css
@@ -22,7 +22,7 @@ img {
 }
 
 .header {
-    background-color: #a01040;
+    background-color: #a13baa;
     padding: 15px;
     text-align: center;
 }
