--- a/html/index.css
+++ b/html/index.css
@@ -84,7 +84,7 @@ h2.header {
     background-color: white;
     border: 3px 3px 12px;
     align-content: center;
-    /* margin: auto; */
+    margin: auto;
 
     border-radius: 5px;
 
