--- a/html/index.css
+++ b/html/index.css
@@ -18,8 +18,8 @@ body {
 } */
 
 img {
-    max-width: 100%;
-    height: auto;
+    max-height: 100%;
+    width: auto;
     object-fit: scale-down;
 }
 
