--- a/html/index.css
+++ b/html/index.css
@@ -111,7 +111,7 @@ h2.header {
 
 p {
     padding: 10px;
-    font-size: 25px;
+    font-size: 4vw;
     width: 95%;
     align-content: center;
     margin: auto;
