Fixing div containters...

--- a/html/index.css
+++ b/html/index.css
@@ -75,7 +75,7 @@ h2.header {
     max-width: 1000px;
 
     padding: 20px;
-    font-size: 20px;
+    font-size: 4vw;
     width: 80%;
     background-color: white;
     border: 3px 3px 12px;
