--- a/html/index.css
+++ b/html/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-size: 28px;
-    font-family: "Bookman", Gadget, sans-serif;
+    font-family: Georgia, serif;
     vertical-align: center;
     background-color: #f1f1f1;
     padding-bottom: 50px;
