--- a/html/index.css
+++ b/html/index.css
@@ -24,7 +24,7 @@ img {
 }
 
 .header {
-    background-color: #a13baa;
+    background-color: rgb(171, 46, 202);
     padding: 15px;
     text-align: center;
 }
@@ -39,7 +39,7 @@ h2.header {
 
 #navbar {
     overflow: hidden;
-    background-color: #a01040;
+    background-image: linear-gradient(#a01040,rgb(171, 46, 202));
 }
 
 /* navbar links */
