--- a/html/index.css
+++ b/html/index.css
@@ -31,9 +31,7 @@ img {
 
 h1.header {
     color: white;
-    background:url(
-        data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAPUlEQVQYlWMwcTw/kwEJmDien4lNjAGXAIYkPgm8Jl0wuTDzgskFTJOxKcKqmGiFRFtNkmewSRA0CVeAAwAPLUnVLMw63wAAAABJRU5ErkJggg==
-    ) repeat;
+    background-image: linear-gradient(#192e21,rgb(13, 61, 17));
 }
 
 h2.header {
@@ -47,7 +45,7 @@ h2.header {
 
 div.header{
     background:url(
-        data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAPUlEQVQYlWMwcTw/kwEJmDien4lNjAGXAIYkPgm8Jl0wuTDzgskFTJOxKcKqmGiFRFtNkmewSRA0CVeAAwAPLUnVLMw63wAAAABJRU5ErkJggg==
+        data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAeUlEQVQYlY3QsQ3AIAwEwC9paZCQMoYzgGfKNL9LGk8AbbZgA1IgIeI0FO5O/3pDtDC0SMsX7SwUHWdnoeWLoUWKFsKj43543M8Pw6NsSqT+w1gRUmdocSQ4DI+qVFapDC0ym06MtdLDNXW/2o9B6p/KOWb7PbsPfwFzqsYVk7XbegAAAABJRU5ErkJggg==
     ) repeat;
  }
 
