--- a/html/index.css
+++ b/html/index.css
@@ -31,7 +31,7 @@ img {
 
 h1.header {
     color: white;
-    background-image: linear-gradient(#192e21,rgb(13, 61, 17));
+    /* background-image: linear-gradient(#192e21,rgb(13, 61, 17)); */
 }
 
 h2.header {
