--- a/html/index.css
+++ b/html/index.css
@@ -30,7 +30,8 @@ img {
 }
 
 h1.header {
-    color: white;
+    color:url(
+        data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAeUlEQVQYlY3QsQ3AIAwEwC9paZCQMoYzgGfKNL9LGk8AbbZgA1IgIeI0FO5O/3pDtDC0SMsX7SwUHWdnoeWLoUWKFsKj43543M8Pw6NsSqT+w1gRUmdocSQ4DI+qVFapDC0ym06MtdLDNXW/2o9B6p/KOWb7PbsPfwFzqsYVk7XbegAAAABJRU5ErkJggg==;
     /* background-image: linear-gradient(#192e21,rgb(13, 61, 17)); */
 }
 
