Fixing div containters...

--- a/html/index.css
+++ b/html/index.css
@@ -32,10 +32,8 @@ img {
 }
 
 h1.header {
-    color:url(
-        data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAeUlEQVQYlY3QsQ3AIAwEwC9paZCQMoYzgGfKNL9LGk8AbbZgA1IgIeI0FO5O/3pDtDC0SMsX7SwUHWdnoeWLoUWKFsKj43543M8Pw6NsSqT+w1gRUmdocSQ4DI+qVFapDC0ym06MtdLDNXW/2o9B6p/KOWb7PbsPfwFzqsYVk7XbegAAAABJRU5ErkJggg==;
-    ) repeat;
-    background-image: linear-gradient(rgb(7, 4, 0),#70692a);
+    color: rgb(129, 21, 133)
+    background-image: linear-gradient(#4b461d,rgb(7, 4, 0));
 }
 
 h2.header {
