--- a/html/index.css
+++ b/html/index.css
@@ -36,7 +36,7 @@ h1.header {
     /* color: rgb(129, 21, 133) */
     /* color: linear-gradient(#70088a,rgb(7, 4, 0)); */
     /* background: black; */
-    background-color: rgba(0,0,0,.5); 
+    background-color: rgba(0,0,0,1); 
     /* background-image: linear-gradient(#4b461d,rgb(7, 4, 0)); */
 }
 
