--- a/html/index.css
+++ b/html/index.css
@@ -47,7 +47,7 @@ h2.header {
 
 #navbar {
     overflow: hidden;
-    background-image: linear-gradient(#a01040,rgb(171, 46, 202));
+    background-image: linear-gradient(#500820,rgb(171, 46, 202));
 }
 
 div.header{
