--- a/html/index.css
+++ b/html/index.css
@@ -29,7 +29,7 @@ img {
 }
 
 .header {
-    background-color: rgb(171, 46, 202);
+    /* background-color: rgb(171, 46, 202); */
     padding: 15px;
     text-align: center;
 }
