Changing colour format...

--- a/html/index.css
+++ b/html/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-size: 28px;
-    font-family: Georgia, serif;
+    font-family: Verdana,Geneva,sans-serif; 
     vertical-align: center;
     /* background: rgb(125, 200, 250); */
     background: #14A098;
