--- a/html/index.css
+++ b/html/index.css
@@ -1,3 +1,30 @@
+@media screen and (min-width: 1920px) {
+    p {
+        font-size: 36px;
+    }
+    a {
+        font-size: 36px;
+    }
+}
+
+/* navbar height 49px */
+@media screen and (min-width: 574px) {
+    div.nav-wrapper {
+        height: 89px;
+    }
+}
+@media screen and (min-width: 292px) and (max-width: 573px) {
+    div.nav-wrapper {
+        height: 138px;
+    }
+}
+@media screen and (max-width: 291px) {
+    div.nav-wrapper {
+        height: 187px;
+    }
+}
+
+
 body {
     margin: 0;
     /* font-size: 28px; */
@@ -21,21 +48,67 @@ body {
 
 img {
     display: block;
-
-
     width: 60%;
-    
-    
     margin-left: auto;
-    
-    
     margin-right: auto;
 }
 
 .header {
-    /* background-color: rgb(171, 46, 202); */
     padding: 15px;
     text-align: center;
+}
+
+h3.header{
+    /*align-self:start;*/
+    width:100%;
+    height:auto;
+    font-size: 1.5vw;
+    /* grid-row:auto; */
+    align-content:center;
+    text-align: center;
+    padding-top: 80px;
+    /* font-size: 50px; */
+}
+
+.leftBox{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.rightBox{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    /* height:auto
+    width: 30%; 
+    float: right;
+    grid-area: b; */
+}
+
+.vid{
+    max-width: 100%;
+    height: auto;
+    object-fit: scale-down;
+    /* object-fit: contain;
+    margin: auto; */
+}
+
+.responsiveVid {
+    max-width: 70%;
+    height: auto;
+    object-fit: scale-down;
+}
+
+.responsiveIcon {
+    max-width: 1.5vw !important;
+    height: auto !important;
+    object-fit: scale-down;
+    float: left;
+    font-size: 36px;
+    padding-right: 8px;
 }
 
 h1.header {
@@ -102,6 +175,44 @@ div.header{
     box-shadow: 0px 0px 15px #300040
 }
 
+.content1 {
+    max-width: 1000px;
+    padding: 20px;
+    /* font-size: 2vw; */
+    width: 80%;
+    background-color: white;
+    border: 3px 3px 12px;
+    align-content: center;
+    margin: auto;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px grey;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 100%;
+    height: auto;
+}
+.content2 {
+    max-width: 1000px;
+    padding: 20px;
+    /* font-size: 2vw; */
+    width: 80%;
+    background-color: white;
+    border: 3px 3px 12px;
+    align-content: center;
+    margin: auto;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px grey;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    grid-template-rows: 100%;
+    height: auto;
+}
+
+/* @media screen and (min-width: 220px) {
+    .content2 {
+    font-size: 12px;
+} */
+
 .half {
     left: 0%;
 }
@@ -132,17 +243,7 @@ p {
     align-content: center;
     margin: auto;
 } 
-@media screen and (min-width: 1920px) {
-    p {
- font-size: 36px;
-    }
-}
 
-@media screen and (min-width: 1920px) {
-    a {
- font-size: 36px;
-    }
-}
 
 .rotate {
     -ms-transform: rotate(90deg); /* IE 9 */
